<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:padding="10dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="320dp"
    android:layoutDirection="rtl"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:id="@+id/name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#f51a3f"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:background="@drawable/text_box_background"
        android:inputType="numberDecimal" />


    <CheckBox
        android:layout_width="match_parent"
        android:text="@string/product_not_exist"
        android:layout_marginRight="15dp"
        android:id="@+id/notExistCB"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_title"
            style="@style/dialog_gray_button" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_gold_button"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/change_product" />

    </LinearLayout>




</LinearLayout>