<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layoutDirection="rtl"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:id="@+id/item_processing_customer_name"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="خالد الحارثي"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorAccentDark"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/item_processing_date"
                    android:textColor="#8f8f8f"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/item_processing_customer_address"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:textColor="#4E8CF4"
                android:textStyle="italic"
                android:text="@string/address_msg"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/item_processing_customer_distance"
                android:layout_gravity="right"
                android:visibility="gone"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/golden_button"
                android:text="@string/how_far_msg"
                android:layout_height="wrap_content" />


            <include layout="@layout/seperater"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layoutDirection="ltr"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:id="@+id/item_processing_totalPrice"
                    android:textStyle="bold"
                    android:textColor="#8f8f8f"
                    android:text="@string/price_msg"
                    android:textSize="17sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:text="@string/total_msg"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/order_delivered"
                android:id="@+id/item_processing_delivered"
                android:theme="@style/GreenButton"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>