<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/login_activity_root"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:background="#434b62"
        android:layout_height="match_parent"/>
    <View
        android:layout_width="match_parent"
        android:background="@drawable/grocery_pattern"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/logo"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        layout="@layout/big_logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/logo"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameWrapper"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:hint="@string/store_name"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#ccc" />


            <CheckBox
                android:layout_width="match_parent"
                android:text="@string/has_veg_cb"
                android:padding="10dp"
                android:id="@+id/hasVeg"
                android:layout_height="wrap_content" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#ccc" />


            <CheckBox
                android:layout_width="match_parent"
                android:text="@string/takes_tax_cb"
                android:padding="10dp"
                android:id="@+id/takesTax"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/taxWarning"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#ccc" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:onClick="takePhoto"
                android:layout_marginRight="10dp"
                android:id="@+id/takePhoto"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_weight="1"
                    android:text="@string/store_picture"
                    android:textColor="#000"
                    android:textColorLink="#4E8CF4"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp"
                    android:paddingRight="5dp"
                    android:gravity="right"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/camera_icon"
                    android:layout_gravity="center_vertical"/>
            </TableRow>

            <ImageView
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:id="@+id/photo_iv"
                android:layout_height="80dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#ccc" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="تسجيل"
                android:id="@+id/sign_up_with_phone"
                android:theme="@style/BlueButton"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

