<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#fff"
        android:id="@+id/store_details"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/maps_address_container"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/address_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_width="35dp"
                android:layout_gravity="center"
                android:id="@+id/maps_progress_bar"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:id="@+id/maps_address_tv"
                android:visibility="gone"
                android:layout_height="wrap_content" />


        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_below="@id/maps_address_container"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/maps_store_details_separator"
            android:layout_marginBottom="10dp"
            android:layout_height="1px"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_below="@id/maps_store_details_separator"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/add_hint"
                android:gravity="center"
                android:padding="10dp"
                android:enabled="false"
                android:clickable="true"
                android:id="@+id/maps_add_hint"
                android:layout_marginLeft="5dp"
                android:textColor="#000"
                android:background="@drawable/golden_button"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/confirm_title"
                android:gravity="center"
                android:textColor="#fff"
                android:id="@+id/maps_confirm"
                android:clickable="true"
                android:enabled="false"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:onClick="confirm"
                android:background="@drawable/purple_button"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/activity_maps_shadow"
        android:layout_above="@id/store_details"
        android:background="@drawable/shadow"/>




</RelativeLayout>